Bug 307891 - activitymanager-plasma not properly translated (not kde-i18n-* -related!)
Summary: activitymanager-plasma not properly translated (not kde-i18n-* -related!)
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Plasma
Component: activities (show other bugs)
Version: 4.9.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 314480 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-05 12:21 UTC by Peter Fischer
Modified: 2013-03-03 22:56 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.10.2


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Fischer 2012-10-05 12:21:38 UTC
When opening the activitymanager (the three colored dots in the panel), then the activitymanager appers, but "Create activity..." and "Add widgets" are not translated (tested with german and frech translations); changes in the cooredponding kde-i18n-file (plasma_package_org.kde.desktop.activitymanager.mo/po) have no effect. But adding the corresponding translations to plasma-desktop.mo/po results in a properly translated activitymanager.

So I thinks its related to the general localization of the activitymanager in kde-workspace.

Reproducible: Always

Steps to Reproduce:
1. Open the activitymanager.
2. Look at the right edge: "Create activity..." and "Add widgets"

Actual Results:  
"Create activity..." and "Add widgets" are not translated (i. e. in english)

Expected Results:  
Correct translation (as of the "corresponding" po/mo-file)

Tested with my self-compiled KDE 4.9.2 and Fedora 18 (pre, KDE 4.9.2) in a VM. I recognized this problem after updating to KDE 4.9.
Comment 1 Burkhard Lück 2012-11-09 20:21:47 UTC
confirmed in recent trunk compiled from sources.

kdebug() calls in kdecore/localization/klocale_kde.cpp show that the catalog is never loaded, thus the messages are untranslated
Comment 2 Albert Astals Cid 2013-02-06 22:55:14 UTC
*** Bug 314480 has been marked as a duplicate of this bug. ***
Comment 3 Aleksey Yermakov 2013-02-15 12:26:12 UTC
I've tried to add translations to plasmagenericshell.po, and both "Create activity..." and "Add widgets" were translated. Is it supposed to be this way? Is plasmagenericshell some kind of backup catalog?
Comment 4 Burkhard Lück 2013-02-17 10:38:00 UTC
(In reply to comment #3)
> I've tried to add translations to plasmagenericshell.po, and both "Create
> activity..." and "Add widgets" were translated. Is it supposed to be this
> way? Is plasmagenericshell some kind of backup catalog?

No.

The plasma devels decided to go with a separate translation catalog for plasma package activitymanager, but forgot to add a method to load a translation catalog for a plasma package in the declarative scriptengine, which has this method only for plasma applets.
So the sentence about qml plasma package catalog name on  http://techbase.kde.org/Development/Tutorials/Localization/i18n_Build_Systems#Declarative_plasmoids is wrong.

As workaround I have locally added a insertCatalog() call to activitymanager.cpp and have it now properly translated.
Comment 5 Aaron J. Seigo 2013-02-17 23:27:39 UTC
Git commit 5e4f62b4bfd2da3b8b4294d5945a5d608b3a447f by Aaron Seigo.
Committed on 18/02/2013 at 00:25.
Pushed by aseigo into branch 'KDE/4.10'.

load the translation catalog

this is not a plasmoid, so it needs to be done manually

M  +1    -0    plasma/desktop/shell/activitymanager/activitymanager.cpp

http://commits.kde.org/kde-workspace/5e4f62b4bfd2da3b8b4294d5945a5d608b3a447f
Comment 6 Burkhard Lück 2013-02-18 17:25:25 UTC
still untranslated + not fixed with Git commit 5e4f62b4bfd2da3b8b

Reason:

activitymanager.cpp:86:    const QString pluginName = "org.kde.desktop.activitymanager";
activitymanager.cpp:102:    KGlobal::locale()->insertCatalog(pluginName);

But the messages are extracted to a catalog named "plasma_package_org.kde.desktop.activitymanager"
Comment 7 Albert Astals Cid 2013-03-03 22:56:55 UTC
Git commit c6ccec336987780358d316351cab4b6b77c506e2 by Albert Astals Cid.
Committed on 03/03/2013 at 23:55.
Pushed by aacid into branch 'KDE/4.10'.

Load the correct catalog

It'd be cool if you guys read the comments to your bugs
FIXED-IN: 4.10.2
CCMAIL: plasma-devel@kde.org

M  +1    -1    plasma/desktop/shell/activitymanager/activitymanager.cpp

http://commits.kde.org/kde-workspace/c6ccec336987780358d316351cab4b6b77c506e2