load the translation catalog

this is not a plasmoid, so it needs to be done manually

BUG:307891